fixed white space and refactored about page

--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -1,14 +1,17 @@
 .aboutContent {
-    text-align: left;
+    text-align: center;
     color:white;
     padding: 30px;
 }
 
 .aboutPic {
-    padding: 30px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
     .aboutPic {
         display: none;
     }
